kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 100%
  template:
    metadata:
      name: web
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: petryalta/kuber-2019-06:job1
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 1
          periodSeconds: 5
        livenessProbe:
          tcpSocket: { port: 8000 }
          initialDelaySeconds: 2
          periodSeconds: 10
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
