kubernetes-networks/dns-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-udp-svc-lb
  namespace: kube-system
spec:
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  ports:
  - protocol: UDP
    port: 53

---
apiVersion: v1
kind: Service
metadata:
  name: dns-tcp-svc-lb
  namespace: kube-system
spec:
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 53
