kubernetes-networks/canary-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: canary1
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /
            backend:
              serviceName: web-svc
              servicePort: 8000

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: canary3
  namespace: kube-system
  annotations:
    nginx.org/ssl-services: kubernetes-dashboard
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
#    nginx.ingress.kubernetes.io/canary-weight: "90"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
spec:
  rules:
    - host: test.com
      http:
          paths:
          - path: /
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 80
